hoàn thiệt productvariant (trừ image)